[package]
name = "aefr"
version = "1.1.3"
edition = "2021"
authors = ["OxidizedSchale<3997101522@qq.com>"]
description = "AEFR's Eternal Freedom & Rust-rendered - A high-performance, open-source editor for Blue Archive fan-content."
license = "GPL-3.0-only" 

[lib]
name = "aefr_lib"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[[bin]]
name = "aefr"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", features = ["wgpu", "persistence", "android-game-activity"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
rusty_spine = { git = "https://github.com/jabuwu/rusty_spine3.8" }
rayon = "1.10"
rodio = { version = "0.19", features = ["wav", "vorbis", "mp3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 安卓特定依赖
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5", features = ["game-activity"] }

# === 修复点：将 rfd 和 tokio 设置为仅限桌面端使用 ===
[target.'cfg(not(target_os = "android"))'.dependencies]
tokio = { version = "1.37", features = ["full"] }
rfd = "0.14" # 文件选择器不在 Android 编译

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
