[package]
name = "GNU-AEFR"
version = "0.8.2"
edition = "2021"
authors = ["OxidizedSchale<3997101522@qq.com>"]
description = "GNU's Not Unix : AEFR's Eternal Freedom & Rust-rendered - A high-performance, open-source editor for Blue Archive fan-content."
license = "GPL-3.0-only" 
#build = "build.rs"

[lib]
name = "aefr_lib"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[[bin]]
name = "aefr"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", features = ["wgpu", "persistence", "android-game-activity"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
rusty_spine = { git = "https://github.com/jabuwu/rusty_spine3.8" }
rayon = "1.10"
rodio = { version = "0.19", features = ["wav", "vorbis", "mp3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embed-resource = "2.0.0"

# 安卓特定依赖
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5", features = ["game-activity"] }

# === 将 rfd 设置为仅限桌面端使用 (已移除冗余的 tokio) ===
[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.14" # 文件选择器不在 Android 编译
